icondir = @pkgdatadir@/icons
icon_DATA = \
						reply_icon.png \
						reply_hover_icon.png \
						rt_icon.png \
						rt_hover_icon.png \
						rt_on_icon.png \
						fav_icon.png \
						fav_hover_icon.png \
						fav_on_icon.png \
						protected_icon.png \
						loading_icon.png \
						post_icon.png \
						settings_icon.png \
						loading_icon.gif


