SUBDIRS = 16x16 22x22 24x24 32x32 48x48 64x64 128x128 256x256

icondir = @datadir@/capricorn/icons
icon_DATA = \
						reply_icon.png \
						reply_hover_icon.png \
						rt_icon.png \
						rt_hover_icon.png \
						rt_on_icon.png \
						fav_icon.png \
						fav_hover_icon.png \
						fav_on_icon.png \
						protected_icon.png \
						loading_icon.png \
						post_icon.png \
						settings_icon.png \
						loading_icon.gif
