icondir = @datadir@/icons/hicolor/16x16/actions
icon_DATA = \
					capricorn-favorite.png \
					capricorn-favorite-hover.png \
					capricorn-favorite-on.png \
					capricorn-loading.png \
					capricorn-protected.png \
					capricorn-reply.png \
					capricorn-reply-hover.png \
					capricorn-retweet.png \
					capricorn-retweet-hover.png \
					capricorn-retweet-on.png
