icondir = @datadir@/icons/hicolor/24x24/actions
icon_DATA = \
					capricorn-account.png \
					capricorn-display.png \
					capricorn-event-notify.png \
					capricorn-loading.png \
					capricorn-media.png \
					capricorn-network.png \
					capricorn-next.png \
					capricorn-post.png \
					capricorn-prev.png \
					capricorn-settings.png \
					capricorn-timeline.png \
					capricorn-tweet.png \
					capricorn-url-shorting.png
